--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -27,10 +27,10 @@
   text-align: right;
 }
 
-.hmpps-table-cell__key {
-  width: 55%;
-}
-
 .poms-table-cell__key {
   width: 25%;
+}
+
+.pull-right {
+  float: right;
 }
