--- a/app/views/allocations/_case_information.html.erb
+++ b/app/views/allocations/_case_information.html.erb
@@ -5,20 +5,24 @@
     <td class="govuk-table__cell"></td>
   </tr>
   <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Current responsibility</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.current_responsibility %></td>
-  </tr>
-
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Case allocation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
-      <a href="<%= edit_case_information_path(@prisoner.offender_no) %>"><%= @prisoner.case_allocation %></a>
+    <td class="govuk-table__cell govuk-!-width-one-half">Current responsibility</td>
+    <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half">
+      <%= @prisoner.current_responsibility %>
+        <a class="govuk-link pull-right" href="<%= edit_case_information_path(@prisoner.offender_no) %>">Change</a>
     </td>
   </tr>
   <tr class="govuk-table__row">
-    <td class="govuk-table__cell hmpps-table-cell__key">Tiering calculation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
-      <a href="<%= edit_case_information_path(@prisoner.offender_no) %>"><%= @prisoner.tier %></a>
+    <td class="govuk-table__cell">Case allocation</td>
+    <td class="govuk-table__cell table_cell__left_align">
+      <%= service_provider_label(@prisoner.case_allocation) %>
+      <a class="govuk-link pull-right" href="<%= edit_case_information_path(@prisoner.offender_no) %>">Change</a>
+    </td>
+  </tr>
+  <tr class="govuk-table__row">
+    <td class="govuk-table__cell">Tiering calculation</td>
+    <td class="govuk-table__cell table_cell__left_align">
+    Tier <%= @prisoner.tier %>
+      <a class="govuk-link pull-right" href="<%= edit_case_information_path(@prisoner.offender_no) %>">Change</a>
     </td>
   </tr>
   </tbody>
