--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -6,12 +6,11 @@
       <td class="govuk-table__cell"></td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
-      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><a
-          href="#"><%= @prisoner.full_name %></a></td>
+      <td class="govuk-table__cell govuk-!-width-one-half">Name</td>
+      <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half"><%= @prisoner.full_name %></td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell hmpps-table-cell__key">Number</td>
+      <td class="govuk-table__cell hmpps-table-cell__key">Prisoner number</td>
       <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.offender_no %></td>
     </tr>
     <tr class="govuk-table__row">
