--- a/app/views/summary/_allocated.html.erb
+++ b/app/views/summary/_allocated.html.erb
@@ -5,7 +5,7 @@
       <th class="govuk-table__header" scope="col"><a
         class='table-sorter__link' href='#'>Prisoner name</a></th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header sorter-false" scope="col">Release date/Parole eligibility</th>
+      <th class="govuk-table__header sorter-false" scope="col">Release/parole<br/>eligibility</th>
       <th class="govuk-table__header" scope="col"><a
         class='table-sorter__link' href='#'>POM</a></th>
       <th class="govuk-table__header" scope="col"><a
