--- a/app/views/summary/index.html.erb
+++ b/app/views/summary/index.html.erb
@@ -7,17 +7,17 @@
   <ul class="govuk-tabs__list" role='tablist'>
       <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#allocated">
-          Allocated (<%= @summary.allocated_total %>)
+          See allocations (<%= @summary.allocated_total %>)
       </a>
       </li>
       <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#awaiting-allocation">
-          Awaiting allocation (<%= @summary.unallocated_total %>)
+          Make allocations (<%= @summary.unallocated_total %>)
       </a>
       </li>
       <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#awaiting-information">
-          Awaiting information (<%= @summary.missing_info_total %>)
+          Update information (<%= @summary.missing_info_total %>)
       </a>
       </li>
   </ul>
