--- a/app/views/allocations/_pom_info.html.erb
+++ b/app/views/allocations/_pom_info.html.erb
@@ -1,8 +1,8 @@
 <table class="govuk-table">
   <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
-    <td class="govuk-table__header" scope="row">Current POM</td>
-    <td class="govuk-table__cell"></td>
+    <td class="govuk-table__header govuk-!-width-one-half" scope="row">Current POM</td>
+    <td class="govuk-table__cell  govuk-!-width-one-half"></td>
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
