--- a/app/views/shared/_current_pom_info.html.erb
+++ b/app/views/shared/_current_pom_info.html.erb
@@ -1,16 +1,16 @@
   <table class="govuk-table">
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__header" scope="row">Current POM</td>
-      <td class="govuk-table__cell"></td>
+      <td class="govuk-table__header govuk-!-width-one-half" scope="row">Current POM</td>
+      <td class="govuk-table__cell govuk-!-width-one-half"></td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
-      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Green, Samantha</td>
+      <td class="govuk-table__cell">Name</td>
+      <td class="govuk-table__cell table_cell__left_align">Green, Samantha</td>
     </tr>
     <tr class="govuk-table__row">
-        <td class="govuk-table__cell hmpps-table-cell__key">Grade</td>
-        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Probation POM</td>
+        <td class="govuk-table__cell">Grade</td>
+        <td class="govuk-table__cell table_cell__left_align">Probation POM</td>
       </tr>
     </tbody>
   </table>
