--- a/app/views/summary/_awaiting.html.erb
+++ b/app/views/summary/_awaiting.html.erb
@@ -5,26 +5,23 @@
       <th class="govuk-table__header" scope="col"><a
         class='table-sorter__link' href='#'>Prisoner name</th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header sorter-false" scope="col">Awaiting allocation for</th>
-      <th class="govuk-table__header sorter-false" scope="col">Release date/Parole eligibility</th>
-      <th class="govuk-table__header header-width__8" scope="col">
-        <a href='#' class='table-sorter__link'>Tier</a>
+      <th class="govuk-table__header sorter-false" xscope="col">Release/parole<br/>eligibility</th>
+      <th class="govuk-table__header sorter-false" scope="col">Responsibility</th>
+      <th class="govuk-table__header sorter-false" scope="col">Waiting</th>
       </th>
-      <th class="govuk-table__header" scope="col">Action</th>
+      <th class="govuk-table__header sorter-false" scope="col">Action</th>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
     <% @summary.unallocated_offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
-        <td aria-label="Action" class="govuk-table__cell "><%= offender.full_name %></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell "><%= offender.offender_no %></td>
-        <td aria-label="Awaiting allocation for" class="govuk-table__cell ">
+        <td aria-label="Prisoner name" class="govuk-table__cell "><%= offender.full_name %></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
+        <td aria-label="Release/parole eligibility" class="govuk-table__cell"><%= format_date(offender.release_date) %></td>
+        <td aria-label="Responsibility" class="govuk-table__cell"> NEW-FIELD </td>
+        <td aria-label="Awaiting allocation for" class="govuk-table__cell">
           <%= offender.awaiting_allocation_for %> days
         </td>
-        <td aria-label="Release date/Parole eligibility" class="govuk-table__cell ">
-          <%= format_date(offender.release_date) %>
-        </td>
-        <td aria-label="Tier" class="govuk-table__cell "><%= offender.tier %></td>
         <td aria-label="Action" class="govuk-table__cell ">
           <a href="<%= new_allocations_path(offender.offender_no) %>">Allocate</a>
         </td>
