--- a/app/views/summary/_awaiting_information.html.erb
+++ b/app/views/summary/_awaiting_information.html.erb
@@ -4,9 +4,9 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col"><a href='#' class='table-sorter__link'>Prisoner name</a></th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header" scope="col"><a href="#">Case allocation</a></th>
+      <th class="govuk-table__header" scope="col"><a href="#">Service provider</a></th>
       <th class="govuk-table__header" scope="col"><a href="#">Tier</a></th>
-      <th class="govuk-table__header" scope="col"><a href="#">Awaiting for</a></th>
+      <th class="govuk-table__header" scope="col"><a href="#">Waiting</a></th>
       <th class="govuk-table__header sorter-false" scope="col">Action</th>
     </tr>
     </thead>
@@ -17,7 +17,7 @@
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= offender.offender_no %></td>
 
         <!-- Todo: REFACTOR THIS SECTION TO USE PRESENTERS -->
-        <td aria-label="Case allocation" class="govuk-table__cell ">
+        <td aria-label="Service provider" class="govuk-table__cell ">
           <% if offender.case_allocation %>
             <%= offender.case_allocation %>
           <% else %>
@@ -31,7 +31,7 @@
             Not provided
           <% end %>
         </td>
-        <td aria-label="Awaiting for" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
+        <td aria-label="Waiting" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
         <td aria-label="Action" class="govuk-table__cell "><%= link_to "Edit", new_case_information_path(offender.offender_no) %></td>
       </tr>
     <% end %>
