--- a/app/views/poms/_probation_poms_table.html.erb
+++ b/app/views/poms/_probation_poms_table.html.erb
@@ -4,18 +4,18 @@
     <th class="govuk-table__header" scope="col"><a
       class='table-sorter__link' href='#'>POM name</a></th>
     <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier A cases</a></th>
+      <a class="table-sorter__link" href="#">Tier A<br/>cases</a></th>
     <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier B cases</a></th>
+      <a class="table-sorter__link" href="#">Tier B<br/>cases</a></th>
     <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier C cases</a></th>
+      <a class="table-sorter__link" href="#">Tier C<br/>cases</a></th>
     <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier D cases</a></th>
+      <a class="table-sorter__link" href="#">Tier D<br/>cases</a></th>
     <th class="govuk-table__header" scope="col">
       <a class="table-sorter__link" href="#">Total</a></th>
     <th class="govuk-table__header header-width__8" scope="col">
       <a
-        class='table-sorter__link' href='#'>Working pattern</a></th>
+        class='table-sorter__link' href='#'>Working<br/>pattern</a></th>
     <th class="govuk-table__header" scope="col"><a
       class='table-sorter__link' href='#'>Status</a></th>
     <th class="govuk-table__header sorter-false" scope="col">Action</th>
