--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -23,7 +23,9 @@
   <% @recommended_poms.each_with_index do |pom, i| %>
     <tr class="govuk-table__row recommended_pom_row_<%= i %>">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
-      <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
+      <td aria-label="Previous allocation" class="govuk-table__cell">
+        <%= 'Yes' if @previously_allocated_pom_ids.include?(pom.staff_id) %>
+      </td>
       <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
       <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
       <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
@@ -79,7 +81,9 @@
       <% @not_recommended_poms.each_with_index do |pom, i| %>
         <tr class="govuk-table__row not_recommended_pom_row_<%= i %>">
           <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
-          <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
+          <td aria-label="Previous allocation" class="govuk-table__cell">
+            <%= 'Yes' if @previously_allocated_pom_ids.include?(pom.staff_id) %>
+          </td>
           <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
           <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
           <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
