Fix table spacing
Fixes the table spacing in my caseload and the POM section.

--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -6,7 +6,7 @@
         class='table-sorter__link' href='#'>Prisoner name</a></th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
       <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Release date/Parole Eligibility</a></th>
+        <a class="table-sorter__link" href="#">Release/parole<br/>eligibility</a></th>
       <th class="govuk-table__header" scope="col">
         <a class="table-sorter__link" href="#">Tier</a></th>
       <th class="govuk-table__header" scope="col">
