--- a/app/views/poms/my_caseload.html.erb
+++ b/app/views/poms/my_caseload.html.erb
@@ -25,7 +25,7 @@
       class='table-sorter__link' href='#'>Prisoner name</a></th>
     <th class="govuk-table__header" scope="col">Prisoner number</th>
     <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Release date/parole eligibility</a></th>
+      <a class="table-sorter__link" href="#">Release/parole<br/>eligibility</a></th>
     <th class="govuk-table__header" scope="col">
       <a class="table-sorter__link" href="#">Allocation date</a></th>
     <th class="govuk-table__header" scope="col">
