--- a/app/views/poms/new_cases.html.erb
+++ b/app/views/poms/new_cases.html.erb
@@ -12,7 +12,7 @@
       <th class="govuk-table__header" scope="col">
         <a class="table-sorter__link" href="#">Arrival date</a></th>
       <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Release date/parole eligibility</a></th>
+        <a class="table-sorter__link" href="#">Release/parole<br/>eligibility</a></th>
       <th class="govuk-table__header" scope="col">
         <a class="table-sorter__link" href="#">Allocation date</a></th>
       <th class="govuk-table__header" scope="col">
