--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -22,7 +22,9 @@
         <td aria-label="Prisoner name" class="govuk-table__cell "><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
         <td aria-label="Release/parole eligibility" class="govuk-table__cell"><%= format_date(offender.release_date) %></td>
-        <td aria-label="Responsibility" class="govuk-table__cell"> NEW-FIELD </td>
+        <td aria-label="Responsibility" class="govuk-table__cell">
+          <%= responsibility_label(ResponsibilityService.calculate_responsibility(offender)) %>
+        </td>
         <td aria-label="Awaiting allocation for" class="govuk-table__cell">
           <%= offender.awaiting_allocation_for %> days
         </td>
