--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
       <% if current_user.present? %>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
         <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>
-          <%= PrisonService.name_for(caseload) %><span class="govuk-!-padding-left-1">|</span></span>
+          <%= PrisonService.name_for(active_caseload) %><span class="govuk-!-padding-left-1">|</span></span>
         <a href='#' class='govuk-header__link govuk-!-font-size-16 govuk-!-padding-left-1'><%= current_user %></a>
       </li>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
