Change how dates are presented
Shows dates on the allocations screen, and changes the title in summary
screens to reflect what is actually shown.

Implements most of
https://trello.com/c/n5mkrcP6/635-updates-to-dates-shown-sentence-type
but not the sentence type as we don't know that yet.

--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -12,7 +12,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header sorter-false" scope="col">Release/parole<br/>eligibility</th>
+      <th class="govuk-table__header sorter-false" scope="col">Earliest release date</th>
       <th class="govuk-table__header" scope="col">POM</th>
       <th class="govuk-table__header" scope="col">Allocation date</th>
       <th class="govuk-table__header sorter-false" scope="col">Action</th>
