--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -1,17 +1,35 @@
 <table class="govuk-table">
   <tbody class="govuk-table__body">
-  <tr class="govuk-table__row">
-    <td class="govuk-table__header govuk-!-width-one-half" scope="row">Offence</td>
-    <td class="govuk-table__cell govuk-!-width-one-half"></td>
-  </tr>
-  <tr class="govuk-table__row">
-    <td class="govuk-table__cell govuk-!-width-one-half">Main offence</td>
-    <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"><%= @prisoner.main_offence %></td>
-  </tr>
-  <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Release / parole eligibility</td>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__header govuk-!-width-one-half" scope="row">Offence</td>
+      <td class="govuk-table__cell govuk-!-width-one-half"></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell govuk-!-width-one-half">Main offence</td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"><%= @prisoner.main_offence %></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Release date</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.earliest_release_date) %>
+        <%= format_date(@prisoner.release_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Parole eligibility</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.parole_eligibility_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Home detention curfew eligibility</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.home_detention_curfew_eligibility_date, replacement: 'N/A') %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Tariff date</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= format_date(@prisoner.tariff_date, replacement: 'N/A') %>
       </td>
     </tr>
   </tbody>
