--- a/app/views/prisons/index.html.erb
+++ b/app/views/prisons/index.html.erb
@@ -4,9 +4,9 @@
 <h1 class="govuk-heading-xl govuk-!-margin-top-0 govuk-!-margin-bottom-4">Choose prison</h1>
 
 <ul class="govuk-list">
-  <% PrisonService.prisons_from_list(caseloads).each do | prison| %>
+  <% PrisonService.prisons_from_list(caseloads).each do | code, title| %>
     <li>
-      <a href="<%= prisons_update_path(code: prison[0], next: @next) %>"><%= prison_title(prison[0]) %></a>
+      <a href="<%= prisons_update_path(code: code, next: @next) %>"><%= title %></a>
     </li>
   <% end %>
 </ul>
