Update POM caseload page table header
The table header in the POMs caseload pages still references 'release/
parole eligibility date', but this has been updated elsewhere to display
'earliest release date', this PR just updates the pages to be in line
with the rest of the site.

--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -13,7 +13,7 @@
       <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
       <th class="govuk-table__header" scope="col">Arrival date</th>
-      <th class="govuk-table__header" scope="col">Release/parole<br/>eligibility</th>
+      <th class="govuk-table__header" scope="col">Earliest release<br/> date</th>
       <th class="govuk-table__header" scope="col">Allocation<br/>date</th>
       <th class="govuk-table__header" scope="col">Role</th>
     </tr>
