--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -27,7 +27,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
-      <th class="govuk-table__header" scope="col">Release/parole<br/>eligibility</th>
+      <th class="govuk-table__header" scope="col">Earliest release<br/> date</th>
       <th class="govuk-table__header" scope="col">Allocation<br/>date</th>
       <th class="govuk-table__header" scope="col">Role</th>
     </tr>
