--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -32,5 +32,13 @@
         <%= format_date(@prisoner.tariff_date, replacement: 'N/A') %>
       </td>
     </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Sentence type</td>
+      <td class="govuk-table__cell table_cell__left_align">
+          <%= sentence_type_label(@prisoner) %>
+          <!-- <%= @prisoner.imprisonment_status %> -->
+
+      </td>
+    </tr>
   </tbody>
 </table>
